Implemented new operation that retrieves the concordance of a given input string which includes the location of each word as it originally appeared in the input.
