# swagger_server/models/location_result.py
@@ -6,25 +6,25 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from swagger_server.models.base_model_ import Model
-from swagger_server.models.result_concordance import ResultConcordance  # noqa: F401,E501
+from swagger_server.models.location_result_concordance import LocationResultConcordance  # noqa: F401,E501
 from swagger_server import util
 
 
-class Result(Model):
+class LocationResult(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
-    def __init__(self, concordance: List[ResultConcordance]=None, input: str=None):  # noqa: E501
-        """Result - a model defined in Swagger
+    def __init__(self, concordance: List[LocationResultConcordance]=None, input: str=None):  # noqa: E501
+        """LocationResult - a model defined in Swagger
 
-        :param concordance: The concordance of this Result.  # noqa: E501
-        :type concordance: List[ResultConcordance]
-        :param input: The input of this Result.  # noqa: E501
+        :param concordance: The concordance of this LocationResult.  # noqa: E501
+        :type concordance: List[LocationResultConcordance]
+        :param input: The input of this LocationResult.  # noqa: E501
         :type input: str
         """
         self.swagger_types = {
-            'concordance': List[ResultConcordance],
+            'concordance': List[LocationResultConcordance],
             'input': str
         }
 
@@ -36,33 +36,33 @@ class Result(Model):
         self._input = input
 
     @classmethod
-    def from_dict(cls, dikt) -> 'Result':
+    def from_dict(cls, dikt) -> 'LocationResult':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The result of this Result.  # noqa: E501
-        :rtype: Result
+        :return: The location_result of this LocationResult.  # noqa: E501
+        :rtype: LocationResult
         """
         return util.deserialize_model(dikt, cls)
 
     @property
-    def concordance(self) -> List[ResultConcordance]:
-        """Gets the concordance of this Result.
+    def concordance(self) -> List[LocationResultConcordance]:
+        """Gets the concordance of this LocationResult.
 
 
-        :return: The concordance of this Result.
-        :rtype: List[ResultConcordance]
+        :return: The concordance of this LocationResult.
+        :rtype: List[LocationResultConcordance]
         """
         return self._concordance
 
     @concordance.setter
-    def concordance(self, concordance: List[ResultConcordance]):
-        """Sets the concordance of this Result.
+    def concordance(self, concordance: List[LocationResultConcordance]):
+        """Sets the concordance of this LocationResult.
 
 
-        :param concordance: The concordance of this Result.
-        :type concordance: List[ResultConcordance]
+        :param concordance: The concordance of this LocationResult.
+        :type concordance: List[LocationResultConcordance]
         """
         if concordance is None:
             raise ValueError("Invalid value for `concordance`, must not be `None`")  # noqa: E501
@@ -71,20 +71,20 @@ class Result(Model):
 
     @property
     def input(self) -> str:
-        """Gets the input of this Result.
+        """Gets the input of this LocationResult.
 
 
-        :return: The input of this Result.
+        :return: The input of this LocationResult.
         :rtype: str
         """
         return self._input
 
     @input.setter
     def input(self, input: str):
-        """Sets the input of this Result.
+        """Sets the input of this LocationResult.
 
 
-        :param input: The input of this Result.
+        :param input: The input of this LocationResult.
         :type input: str
         """
         if input is None:
